# velo-crash-insights

./: .gitattributes  .gitignore  README.md  analytics.py  app.py  data_loader.py  map_utils.py  pyproject.toml  replit.md  requirements.txt
.github/: FUNDING.yml
.streamlit/: config.toml
attached_assets/: RoadTrafficAccidentLocations_last5years.json  RoadTrafficAccidentLocations_sample_1760706891743.json  RoadTrafficAccidentLocations_schema_1760706891744.json
scripts/: dataset_check.py  dataset_fetch.py  dataset_metric_checker.py  lock_to_requirements.py  orig_dataset_trim.py
